--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<a href="#" class="navbar-brand">Recipe Book</a>
+			<a href="#" class="navbar-brand">Library</a>
 		</div>
 		<div class="collapse navbar-collapse">
 			<ul class="nav navbar-nav">
-				<li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-				<li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
+				<li><a href="#" (click)="onSelect('books')">Books</a></li>
+				<li><a href="#" (click)="onSelect('shelves')">Shelves</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li class="dropdown">
