--- a/src/app/book/book.component.html
+++ b/src/app/book/book.component.html
@@ -1,9 +1,15 @@
 <div class="row">
 	<div class="col-xs-12">
+		<h1>Book</h1>
+	</div>	
+</div>
+<hr>
+<div class="row">
+	<div class="col-xs-12">
 		<button class="btn btn-success">New Book</button>
 	</div>
 </div>
-<hr>
+<br>
 <div class="row">
 	<div class="col-xs-4" *ngFor="let book of books">
 		<a href="#" class="list-group-item clearfix">
@@ -14,7 +20,6 @@
 		</a>
 		<br>
 	</div>
-
 </div>
 <div class="row">
 	<div class="col-xs-6">
