--- a/src/app/shelves/shelves.component.html
+++ b/src/app/shelves/shelves.component.html
@@ -1,5 +1,11 @@
 <div class="row">
 	<div class="col-xs-12">
+		<h1>Shelves</h1>
+	</div>	
+</div>
+<hr>
+<div class="row">
+	<div class="col-xs-12">
 		<button class="btn btn-success">New Shelf</button>
 	</div>
 </div>
